...
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:layout_height="match_parent">

    </WebView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible"
        app:srcCompat="@android:drawable/ic_dialog_email" />
...
